# OpenEnv_Hackathon

./: .dockerignore  .gitattributes  .gitignore  ANALYSIS_REPORT.md  Dockerfile  README.md  STRUCTURE.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  precheck.py  pyproject.toml  requirements.txt  run.py  spec.md
openenv_bug_triage/: __init__.py  app.py  env.py  grader.py  models.py  policy.py  reward.py  tasks.py
openenv_bug_triage/data/tasks/: bug_triage_easy.json  bug_triage_hard.json  bug_triage_medium.json
openenv_bug_triage/ui/: app.js  index.html  styles.css
scripts/: baseline_inference.py
server/: Dockerfile  __init__.py  app.py  environment.py  heuristics.py  policy.py  requirements.txt
server/graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
server/tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
static/: app.js  index.html  styles.css
tests/: README.md  test_api_contract.py  test_app_api.py  test_app_ui.py  test_determinism.py  test_env_api.py  test_environment.py  test_graders.py  test_heuristics.py  test_inference_contract.py  test_policy.py
